feat: implement delete
